Release 2.00.11 (#51)
* Update to JDK 17 JAVA EE 8

* Fix typo

* Add logic to sign jar

* WIP

* Fix logic

* Add logic to work without keystore password

* Update .gitignore

* Working code

* More changes

* Update config

* WIP

* Some more changes

* Formatting

* Some more changes

* Fix typo

* Update version

* Update documentation

* Update .gitignore

* Add note about current stack

* Update docs

* Fix warnings

* More changes

---------

Co-authored-by: Javier Ortiz Bultron <javierortiz@pingidentity.com>